--- a/gobotany/simplekey/templates/simplekey/help_map.html
+++ b/gobotany/simplekey/templates/simplekey/help_map.html
@@ -32,7 +32,7 @@
                     <p class="more-info">
                         <a rel="shadowbox;height=380;width=640;"
                             href="http://www.youtube.com/v/{{ group.youtube_id }}&amp;autoplay=1">
-                        Get more info</a>
+                        View video</a>
                     </p>
                     {% endif %}
                 </div>
@@ -61,7 +61,7 @@
                         <p class="more-info">
                             <a rel="shadowbox;height=380;width=640;"
                                 href="http://www.youtube.com/v/{{ subgroup.youtube_id }}&amp;autoplay=1">
-                            Get more info</a>
+                            View video</a>
                         </p>
                         {% endif %}
                     </div>
