Use HTML5 video links in the About section to support devices without Flash.
This completes the move to using HTML5 video when the Flash player is not available,
such as on iOS devices. This will also work in a desktop browser, but only if the
Flash plug-in is not available.

--- a/gobotany/simplekey/templates/simplekey/_simplekey_video_link.html
+++ b/gobotany/simplekey/templates/simplekey/_simplekey_video_link.html
@@ -1,3 +1,4 @@
-        <a href="http://www.youtube.com/embed/{{ youtube_id }}?autoplay=1&amp;rel=0&amp;hd=1&amp;modestbranding=1"
-            onclick='Shadowbox.open({content: this.href, player: "iframe" }); return false;'>View a short video about this group</a>
+        <a class="video"
+            href="http://www.youtube.com/embed/{{ youtube_id }}?autoplay=1&amp;rel=0&amp;hd=1&amp;modestbranding=1">View
+            a short video about this {{ item_type }}</a>
 
