Pulled the taxon scientific name of each content image from its "alt" string, where the importer copies it, instead of doing N queries to the actual taxon objects to get the scientific name; the /woody-plants/ page now requires 8 queries to render, so I am now satisfied that the page can be used in production.

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -40,9 +40,9 @@
                                             {% with i.creator as photographer %}
                                             <a href="{{ i.image_medium }}"
                                                 rel="shadowbox[{{ pile.slug }}]"
-                                                title="{% photo_credit i i.content_object.scientific_name %}">
+                                                title="{% photo_credit i i.scientific_name %}">
                                                 <img src="{{ i.thumb_large }}"
-                                                    alt="{% photo_credit i i.content_object.scientific_name %}">
+                                                    alt="{% photo_credit i i.scientific_name %}">
                                             </a>
                                             {% endwith %}
                                         {% endwith %}
