Level 3 page: 'Change Show Photos Of' menu to native select menu.
The 'Show Photos Of' menu on the Level 3 page was using a widget that did not
behave well on iOS: it did not produce the standard select pane with a list
of values in it, and making a selection required two taps. A native HTML
select menu ought to solve this.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -68,12 +68,8 @@
                     <form id="results-display">
                         <img class="icon" alt=""
                             src="/static/images/icons/show-me.png">
-                        <label for="image-type-selector">Show photos
-                            of:</label>
-                        <select dojoType="dijit.form.Select"
-                            id="image-type-selector"
-                            name="image-type-selector">
-                      </select>
+                        <label for="image-types">Show photos of:</label>
+                        <select id="image-types"></select>
                   </form>
                 </div>
                 <div class="clearit"></div>
