Level 3 page: Change family and genus menus to native select menus.
The family and genus menus were using a combo box widget that brought up a
a keyboard control on mobile devices which, on the iPad, would not dismiss
after a selection was made. With full keyboard entry not truly needed,
simple native select menus ought to work better on mobile devices.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -109,19 +109,11 @@
                     <div class="already-know">
                         <h6>Already know the family or genus?</h6>
                         <label>Family:</label>
-                        <select id="family_select" name="family_select"
-                            dojoType="dijit.form.FilteringSelect"
-                            autocomplete="true" value="sel">
-                        </select>
-                        <button dojoType="dijit.form.Button" 
-                            id="clear_family">Clear</button> 
+                        <select id="families"></select>
+                        <button id="family_clear">Clear</button>
                         <label>Genus:</label>
-                        <select id="genus_select" name="genus_select"
-                            dojoType="dijit.form.FilteringSelect"
-                            autocomplete="true" value="sel">
-                        </select>
-                        <button dojoType="dijit.form.Button" 
-                            id="clear_genus">Clear</button>
+                        <select id="genera"></select>
+                        <button id="genus_clear">Clear<button>
                     </div>
                 </div>
         
