A a proof-of-concept, got the level-3 species-count to vary whenever we update an Ember.js model in our code; since handlebars.js uses the same {{...}} syntax as Django, we need to "escape" our handlebars templates using a new templatetag.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -1,4 +1,5 @@
 {% extends "simplekey/_new_base.html" %}
+{% load verbatim %}
 
 {% block title %}{{ subgroup_results_page.title }}{% endblock %}
 
@@ -51,8 +52,10 @@
 
                 <h3 class="species-count-heading">
                   <span>
-                    <span class="species-count">Finding</span>
-                    matching species
+                    {% handlebars %}
+                      <span class="species-count">{{App3.taxa.len}}</span>
+                      matching species
+                    {% endhandlebars %}
                   </span>
                 </h3>
 
@@ -80,7 +83,9 @@
 
                 <p class="list-all hidden"><a>See 
                     <span class="view-type">a list of</span>
-                    all <span class="species-count">...</span> 
+                    {% handlebars %}
+                      all <span class="species-count">{{App3.taxa.len}}</span>
+                    {% endhandlebars %}
                     matching species.</a></p>
 
                 </div>
