--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -72,7 +72,13 @@
                         <img class="icon" alt=""
                             src="/static/images/icons/show-me.png">
                         <label for="image-types">Show photos of:</label>
-                        <select id="image-types"></select>
+                        {% handlebars %}
+                          {{view Ember.Select viewName="select"
+                            contentBinding="App3.image_types"
+                            optionLabelPath="content"
+                            optionValuePath="content"
+                            selectionBinding="App3.image_type"}}
+                        {% endhandlebars %}
                   </form>
                 </div>
                 <div class="clearit"></div>
