Eliminated extraneous <div> by upgrading "See a list of all 18 matching species." markup to being powered by a full-fledged Ember.View class, that also has taken over responsibility for processing a click on its <a> element to switch from the photo view to the list view, removing another explicit binding we had been setting up.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -87,14 +87,17 @@
                     <div class="wait"></div>
                 </div>
 
-                <p class="list-all hidden"><a>See 
-                    <span class="view-type">a list of</span>
-                    {% handlebars %}
-                      all <span class="species-count">{{App3.taxa.len}}</span>
-                    {% endhandlebars %}
-                    matching species.</a></p>
+                {% handlebars %}
+                {{#view App3.TaxaView tagName="p" class="list-all hidden"}}
+                <a {{action "switch_photo_list"}}>
+                  See {{#if list_not_photos}}a list of{{else}}photos for{{/if}}
+                  all <span class="species-count">{{taxa_count}}</span>
+                  matching species.
+                </a>
+                {{/view}}
+                {% endhandlebars %}
 
-                </div>
+            </div>
 
             <div id="sidebar" class="tinted">
                 <div class="section instructions">
