Fix a couple of formatting problems in search result titles.
Family pages: use lowercase common name without the word The. Genus pages:
only italicize the genus scientific name, not also the new common name that
follows. Also, fix some broken functional tests related to search.

--- a/gobotany/simplekey/templates/simplekey/family.html
+++ b/gobotany/simplekey/templates/simplekey/family.html
@@ -2,8 +2,7 @@
 {% load simplekey_extras %}
 
 {% block title %}
-Family: {{ family.name }} {% if common_name %}({{ common_name }}){% endif %}
-{% endblock %}
+Family: {{ family.name }} {% if common_name %}({{ common_name|cut:"The "|lower }}){% endif %}{% endblock %}
 
 {% block js_top %}
     <script>
