Taught the message at the bottom of the Level 3 page to automatically switch from "See a list of" to "See photos for", using Ember bindings.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -90,7 +90,7 @@
                 {% handlebars %}
                 {{#view App3.TaxaView tagName="p" class="list-all hidden"}}
                 <a {{action "switch_photo_list"}}>
-                  See {{#if list_not_photos}}a list of{{else}}photos for{{/if}}
+                  See {{#if show_list}}photos for{{else}}a list of{{/if}}
                   all <span class="species-count">{{taxa_count}}</span>
                   matching species.
                 </a>
