Fix some places where an incorrect typeface appeared on iOS.
This occurred sometimes because Trebuchet was incorrectly specified, or because
Tahoma (which is not included on iOS) was specified without a similar backup.
Also, combine the clarofix.css styles into the main file, and remove some
obsolete styles.

--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -13,10 +13,8 @@
 
         {# CSS goes here. #}
         {% include "_claro_css.html" %}
-        {# TODO: get rid of clarofix.css; integrate as many others as #}
-        {# possible. Ideally have just one file, styles.css, plus any #}
-        {# conditional stylesheets. #}
-        <link rel="stylesheet" href="/static/css/clarofix.css">
+        {# TODO: Integrate as many CSS files as possible. Ideally #}
+        {# have just styles.css plus any conditional stylesheets. #}
         <link rel="stylesheet" href="/static/css/reset.css">
         <link rel="stylesheet" href="/static/css/basic.css">
         <link rel="stylesheet" href="/static/css/styles.css">
