The breakthrough: following IRC advice, read the todo sample app and learned about ArrayController and about using addObject() instead of push() or split() to manipulate Ember-aware arrays. Two extra filters now appear in the filters list as a proof-of-concept that the view can now see filters added to the controller.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -106,15 +106,13 @@
                 </div>
                 <div class="scroll">
                   <div class="loading">Loading questions…</div>
-                  {% handlebars %}
-                    {{#view App3.FilterView tagName="ul" class="option-list"}}
-                      {{#each items}}
-                        {{#if is_normal}}
-                          <li>PUT FILTER {{filter.slug}} HERE</li>
-                        {{/if}}
+                  <ul class="option-list">
+                    {% handlebars %}
+                      {{#each App3.filter_controller}}
+                        <li>PUT FILTER {{slug}} HERE</li>
                       {{/each}}
-                    {{/view}}
-                  {% endhandlebars %}
+                    {% endhandlebars %}
+                  </ul>
                 </div>
 
                 <div class="section">
