Copied the real filter HTML into the handlebars template.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -109,7 +109,13 @@
                   <ul class="option-list">
                     {% handlebars %}
                       {{#each App3.filter_controller}}
-                        <li>PUT FILTER {{slug}} HERE</li>
+                        <li {{bindAttr id="slug"}}>
+                          <a href="#" class="option">
+                            <span class="name">{{info.friendly_name}}?</span>
+                            <span class="value">{{value}}</span>
+                          </a>
+                          <a href="#" class="clear-filter">Clear</a>
+                        </li>
                       {{/each}}
                     {% endhandlebars %}
                   </ul>
